Fix rating overlapping title

--- a/css/main.css
+++ b/css/main.css
@@ -272,6 +272,11 @@ blockquote {
   text-align: left;
 }
 
+.rating-header .title {
+  display: inline-block;
+  max-width: 85%;
+}
+
 .rating {
   display: inline-block;
   position: absolute;
